Update website: mobile layout fixes, gallery cleanup, and footer links

--- a/gallery.html
+++ b/gallery.html
@@ -145,14 +145,7 @@
             </p>
         </div>
 
-        <!-- Filter Bar -->
-        <div class="flex flex-wrap justify-center gap-3" style="margin-bottom: 4rem;">
-            <button class="filter-btn active">All Photos</button>
-            <button class="filter-btn">High Adventure</button>
-            <button class="filter-btn">Summer Camp</button>
-            <button class="filter-btn">Service Projects</button>
-            <button class="filter-btn">Troop Meetings</button>
-        </div>
+
 
         <!-- Photo Grid -->
         <div id="gallery-grid" class="masonry-grid">
@@ -164,12 +157,7 @@
         </div>
 
         <!-- Load More -->
-        <div style="text-align: center; margin-top: 4rem;">
-            <button class="btn-secondary"
-                style="background: var(--white); color: var(--forest); border-color: rgba(13,27,18,0.1); display: flex; align-items: center; justify-content: center; gap: 0.5rem; margin: 0 auto;">
-                Load More Adventures <span class="material-icons">expand_more</span>
-            </button>
-        </div>
+
 
     </main>
 
@@ -219,6 +207,9 @@
                         <li><a href="eagles.html" class="footer-link">Eagle Scouts</a></li>
                         <li><a href="gallery.html" class="footer-link">Photo Gallery</a></li>
                         <li><a href="join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
                     </ul>
                 </div>
 
