--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="grid lg-grid-cols-12 gap-8">
 
             <!-- Adventures Column -->
-            <div style="grid-column: span 7 / span 7; padding-top: 2.5rem;">
+            <div class="lg-col-span-7" style="padding-top: 2.5rem;">
                 <div class="flex items-center justify-between"
                     style="border-bottom: 1px solid rgba(13,27,18,0.05); padding-bottom: 1.5rem; margin-bottom: 2rem;">
                     <div>
@@ -109,7 +109,7 @@
             </div>
 
             <!-- Sidebar Column -->
-            <div style="grid-column: span 5 / span 5;">
+            <div class="lg-col-span-5">
                 <div
                     style="background-color: var(--khaki); border-radius: 1.5rem; padding: 2.5rem; position: sticky; top: 7rem; height: 600px; display: flex; flex-direction: column;">
                     <div style="margin-bottom: 2rem;">
@@ -181,6 +181,9 @@
                         <li><a href="eagles.html" class="footer-link">Eagle Scouts</a></li>
                         <li><a href="gallery.html" class="footer-link">Photo Gallery</a></li>
                         <li><a href="join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
                     </ul>
                 </div>
 
@@ -193,10 +196,7 @@
                 <p style="font-size: 0.75rem; color: rgba(255,255,255,0.4);">© 2026 Troop 93, Fullerton. All rights
                     reserved.
                 </p>
-                <div class="flex gap-6">
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Privacy Policy</a>
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Terms of Use</a>
-                </div>
+
             </div>
         </div>
     </footer>
