--- a/leadership.html
+++ b/leadership.html
@@ -152,7 +152,7 @@
                     <span class="material-icons">contact_mail</span>
                     Contact Committee
                 </a>
-                <a href="resources.html" class="btn-secondary"
+                <a href="join.html" class="btn-secondary"
                     style="background: var(--white); color: var(--forest); border-color: rgba(13,27,18,0.1); display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
                     Volunteer Info
                 </a>
@@ -207,6 +207,9 @@
                         <li><a href="eagles.html" class="footer-link">Eagle Scouts</a></li>
                         <li><a href="gallery.html" class="footer-link">Photo Gallery</a></li>
                         <li><a href="join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
                     </ul>
                 </div>
 
