--- a/resources.html
+++ b/resources.html
@@ -79,7 +79,7 @@
     <main class="container" style="padding-bottom: 6rem;">
 
         <!-- Categories Grid -->
-        <div class="grid md-grid-cols-2 gap-6"
+        <div class="grid md-grid-cols-3 gap-6"
             style="margin-bottom: 4rem; margin-top: -1.5rem; position: relative; z-index: 20;">
 
             <!-- Advancement Card -->
@@ -112,6 +112,23 @@
                 <a href="resources/volunteer-gear-discounts.html"
                     style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
                     View Discounts <span class="material-symbols-outlined"
+                        style="font-size: 1.125rem;">arrow_forward</span>
+                </a>
+            </div>
+
+            <!-- Leadership Positions Card -->
+            <div class="card" style="padding: 1.75rem; text-align: center;">
+                <div
+                    style="width: 3.5rem; height: 3.5rem; background: rgba(17,212,17,0.1); border-radius: 1rem; display: flex; align-items: center; justify-content: center; color: var(--primary); margin: 0 auto 1.5rem;">
+                    <span class="material-symbols-outlined"
+                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">groups</span>
+                </div>
+                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Leadership Positions</h3>
+                <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
+                    Descriptions and responsibilities for all youth leadership roles.</p>
+                <a href="resources/leadership-positions.html"
+                    style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
+                    View Positions <span class="material-symbols-outlined"
                         style="font-size: 1.125rem;">arrow_forward</span>
                 </a>
             </div>
@@ -358,6 +375,9 @@
                         <li><a href="eagles.html" class="footer-link">Eagle Scouts</a></li>
                         <li><a href="gallery.html" class="footer-link">Photo Gallery</a></li>
                         <li><a href="join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
                     </ul>
                 </div>
 
@@ -370,10 +390,7 @@
                 <p style="font-size: 0.75rem; color: rgba(255,255,255,0.4);">© 2026 Troop 93, Fullerton. All rights
                     reserved.
                 </p>
-                <div class="flex gap-6">
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Privacy Policy</a>
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Terms of Use</a>
-                </div>
+
             </div>
         </div>
     </footer>
