--- a/resources/packing-list.html
+++ b/resources/packing-list.html
@@ -86,37 +86,48 @@
                 <ul class="flex flex-col gap-3" style="color: var(--slate-600); font-size: 0.9375rem;">
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Underwear (at least 2 pairs)</span></li>
+                        <span>Underwear (at least 2 pairs)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Socks (3-4 pairs)</span></li>
+                        <span>Socks (3-4 pairs)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Pants or Shorts (2+ pairs, weather dependent)</span></li>
+                        <span>Pants or Shorts (2+ pairs, weather dependent)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Shirts (2-3, check weather)</span></li>
+                        <span>Shirts (2-3, check weather)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Sweater/Sweatshirt</span></li>
+                        <span>Sweater/Sweatshirt</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Cold Weather Base Layer (if needed)</span></li>
+                        <span>Cold Weather Base Layer (if needed)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Hat (Required outdoors)</span></li>
+                        <span>Hat (Required outdoors)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Appropriate Sleepwear</span></li>
+                        <span>Appropriate Sleepwear</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Hiking Boots, Sneakers or Both</span></li>
+                        <span>Hiking Boots, Sneakers or Both</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Winter Hat/Gloves (if needed)</span></li>
+                        <span>Winter Hat/Gloves (if needed)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span><strong>Rain Gear</strong></span></li>
+                        <span><strong>Rain Gear</strong></span>
+                    </li>
                 </ul>
             </div>
 
@@ -129,31 +140,40 @@
                 <ul class="flex flex-col gap-3" style="color: var(--slate-600); font-size: 0.9375rem;">
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Toothbrush</span></li>
+                        <span>Toothbrush</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Toothpaste</span></li>
+                        <span>Toothpaste</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Soap</span></li>
+                        <span>Soap</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Towel</span></li>
+                        <span>Towel</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Wash Cloth</span></li>
+                        <span>Wash Cloth</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Hairbrush</span></li>
+                        <span>Hairbrush</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Deodorant</span></li>
+                        <span>Deodorant</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Sunscreen</span></li>
+                        <span>Sunscreen</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Bug Spray</span></li>
+                        <span>Bug Spray</span>
+                    </li>
                 </ul>
             </div>
 
@@ -166,49 +186,64 @@
                 <ul class="flex flex-col gap-3" style="color: var(--slate-600); font-size: 0.9375rem;">
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Tent</span></li>
+                        <span>Tent</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Tarp (under/over tent)</span></li>
+                        <span>Tarp (under/over tent)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Sleeping Bag</span></li>
+                        <span>Sleeping Bag</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Extra Blankets (Optional)</span></li>
+                        <span>Extra Blankets (Optional)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Camp Pad, Cot or Air Mattress</span></li>
+                        <span>Camp Pad, Cot or Air Mattress</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Pillow</span></li>
+                        <span>Pillow</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Mess kit (if you have one)</span></li>
+                        <span>Mess kit (if you have one)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Water Bottle</span></li>
+                        <span>Water Bottle</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Day Bag (backpack/string bag)</span></li>
+                        <span>Day Bag (backpack/string bag)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Hiking Stick (optional)</span></li>
+                        <span>Hiking Stick (optional)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Camp Chair or Sit-Upon</span></li>
+                        <span>Camp Chair or Sit-Upon</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Headlamp or Flashlight (extra batteries)</span></li>
+                        <span>Headlamp or Flashlight (extra batteries)</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Cub/Scout Outdoor Essentials</span></li>
+                        <span>Cub/Scout Outdoor Essentials</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>First Aid Kit</span></li>
+                        <span>First Aid Kit</span>
+                    </li>
                     <li class="flex items-start gap-3"><span class="material-symbols-outlined"
                             style="font-size: 1.25rem; color: var(--primary); flex-shrink: 0;">check_box_outline_blank</span>
-                        <span>Scout Handbook</span></li>
+                        <span>Scout Handbook</span>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -283,15 +318,64 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <div class="grid lg-grid-cols-4 gap-8" style="margin-bottom: 4rem;">
+                <div>
+                    <div class="flex items-center gap-3" style="margin-bottom: 1.5rem;">
+                        <span class="material-symbols-outlined" style="color: var(--primary);">explore</span>
+                        <h2 style="font-size: 1.25rem;">Troop 93</h2>
+                    </div>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6;">
+                        Scouting is more than just camping. It's about personal growth, community service, and
+                        discovering what it means to be a leader.
+                    </p>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6; margin-top: 1rem;">
+                        We meet every Tuesday evening. Prospective scouts and their families are always welcome to
+                        observe a meeting.
+                    </p>
+                </div>
+
+                <div>
+                    <h3 style="font-size: 1.125rem; margin-bottom: 1.5rem;">Our Location</h3>
+                    <div class="flex flex-col gap-4">
+                        <div class="flex items-start gap-3">
+                            <span class="material-symbols-outlined"
+                                style="color: var(--primary); font-size: 1.25rem;">location_on</span>
+                            <a href="https://www.google.com/maps/place/Kiwanis+Youth+Park+Scout+Troop+93/@33.8670339,-117.9315788,16z/data=!4m6!3m5!1s0x80dd2a05f20e7d2f:0xb55b974375d687c4!8m2!3d33.867123!4d-117.9320613!16s%2Fg%2F1tscp9pb?entry=ttu&g_ep=EgoyMDI2MDIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                target="_blank" class="footer-link" style="text-align: left; display: block;">Kiwanis
+                                Youth Park<br>386
+                                W Truslow Ave, Fullerton, CA 92832</a>
+                        </div>
+                        <div class="flex items-start gap-3">
+                            <span class="material-symbols-outlined"
+                                style="color: var(--primary); font-size: 1.25rem;">event</span>
+                            <p class="footer-link">Every Tuesday at 7:00 PM</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h3 style="font-size: 1.125rem; margin-bottom: 1.5rem;">Quick Links</h3>
+                    <ul class="flex flex-col gap-3">
+                        <li><a href="../about.html" class="footer-link">About Us</a></li>
+                        <li><a href="../leadership.html" class="footer-link">Leadership</a></li>
+                        <li><a href="../eagles.html" class="footer-link">Eagle Scouts</a></li>
+                        <li><a href="../gallery.html" class="footer-link">Photo Gallery</a></li>
+                        <li><a href="../join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
+                    </ul>
+                </div>
+
+                <div style="text-align: right;">
+                </div>
+            </div>
+
             <div style="border-top: 1px solid rgba(255,255,255,0.05); padding-top: 2rem;"
                 class="flex flex-col md-flex-row justify-between items-center gap-4">
                 <p style="font-size: 0.75rem; color: rgba(255,255,255,0.4);">© 2026 Troop 93, Fullerton. All rights
                     reserved.
                 </p>
-                <div class="flex gap-6">
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Privacy Policy</a>
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Terms of Use</a>
-                </div>
             </div>
         </div>
     </footer>
