--- a/about.html
+++ b/about.html
@@ -71,7 +71,8 @@
                         style="display: inline-block; background: rgba(17,212,17,0.1); color: var(--primary); border-radius: 2rem; font-size: 0.75rem; font-weight: 800; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 1.5rem; padding: 0.5rem 1rem;">Established
                         1922</span>
                     <h1 id="title" style="font-size: clamp(2.5rem, 5vw, 4rem); margin-bottom: 2rem;">A Century of
-                        <br><span style="color: var(--primary);">Fullerton Heritage.</span></h1>
+                        <br><span style="color: var(--primary);">Fullerton Heritage.</span>
+                    </h1>
                     <div id="story-1" class="flex flex-col gap-6"
                         style="font-size: 1.125rem; color: var(--slate-600); line-height: 1.7;">
                         <p>
@@ -208,11 +209,14 @@
                 <div>
                     <h3 style="font-size: 1.125rem; margin-bottom: 1.5rem;">Quick Links</h3>
                     <ul class="flex flex-col gap-3">
-                        <li><a href="about.html" class="footer-link">About Us</a></li>
+                        <li><a href="index.html" class="footer-link">Home</a></li>
                         <li><a href="leadership.html" class="footer-link">Leadership</a></li>
                         <li><a href="eagles.html" class="footer-link">Eagle Scouts</a></li>
                         <li><a href="gallery.html" class="footer-link">Photo Gallery</a></li>
                         <li><a href="join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
                     </ul>
                 </div>
 
