--- a/eagles.html
+++ b/eagles.html
@@ -180,6 +180,9 @@
                         <li><a href="eagles.html" class="footer-link">Eagle Scouts</a></li>
                         <li><a href="gallery.html" class="footer-link">Photo Gallery</a></li>
                         <li><a href="join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
                     </ul>
                 </div>
 
