--- a/resources/ten-essentials.html
+++ b/resources/ten-essentials.html
@@ -232,15 +232,64 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <div class="grid lg-grid-cols-4 gap-8" style="margin-bottom: 4rem;">
+                <div>
+                    <div class="flex items-center gap-3" style="margin-bottom: 1.5rem;">
+                        <span class="material-symbols-outlined" style="color: var(--primary);">explore</span>
+                        <h2 style="font-size: 1.25rem;">Troop 93</h2>
+                    </div>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6;">
+                        Scouting is more than just camping. It's about personal growth, community service, and
+                        discovering what it means to be a leader.
+                    </p>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6; margin-top: 1rem;">
+                        We meet every Tuesday evening. Prospective scouts and their families are always welcome to
+                        observe a meeting.
+                    </p>
+                </div>
+
+                <div>
+                    <h3 style="font-size: 1.125rem; margin-bottom: 1.5rem;">Our Location</h3>
+                    <div class="flex flex-col gap-4">
+                        <div class="flex items-start gap-3">
+                            <span class="material-symbols-outlined"
+                                style="color: var(--primary); font-size: 1.25rem;">location_on</span>
+                            <a href="https://www.google.com/maps/place/Kiwanis+Youth+Park+Scout+Troop+93/@33.8670339,-117.9315788,16z/data=!4m6!3m5!1s0x80dd2a05f20e7d2f:0xb55b974375d687c4!8m2!3d33.867123!4d-117.9320613!16s%2Fg%2F1tscp9pb?entry=ttu&g_ep=EgoyMDI2MDIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                target="_blank" class="footer-link" style="text-align: left; display: block;">Kiwanis
+                                Youth Park<br>386
+                                W Truslow Ave, Fullerton, CA 92832</a>
+                        </div>
+                        <div class="flex items-start gap-3">
+                            <span class="material-symbols-outlined"
+                                style="color: var(--primary); font-size: 1.25rem;">event</span>
+                            <p class="footer-link">Every Tuesday at 7:00 PM</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h3 style="font-size: 1.125rem; margin-bottom: 1.5rem;">Quick Links</h3>
+                    <ul class="flex flex-col gap-3">
+                        <li><a href="../about.html" class="footer-link">About Us</a></li>
+                        <li><a href="../leadership.html" class="footer-link">Leadership</a></li>
+                        <li><a href="../eagles.html" class="footer-link">Eagle Scouts</a></li>
+                        <li><a href="../gallery.html" class="footer-link">Photo Gallery</a></li>
+                        <li><a href="../join.html" class="footer-link">Join the Troop</a></li>
+                        <li><a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank"
+                                class="footer-link" style="color: var(--primary); font-weight: 600;">Troop Web Host
+                                Login</a></li>
+                    </ul>
+                </div>
+
+                <div style="text-align: right;">
+                </div>
+            </div>
+
             <div style="border-top: 1px solid rgba(255,255,255,0.05); padding-top: 2rem;"
                 class="flex flex-col md-flex-row justify-between items-center gap-4">
                 <p style="font-size: 0.75rem; color: rgba(255,255,255,0.4);">© 2026 Troop 93, Fullerton. All rights
                     reserved.
                 </p>
-                <div class="flex gap-6">
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Privacy Policy</a>
-                    <a href="#" class="footer-link" style="font-size: 0.75rem;">Terms of Use</a>
-                </div>
             </div>
         </div>
     </footer>
